# mnn-scrfd

./: .gitignore  CMakeLists.txt  README.md  SCRFD.cpp  SCRFD.h  main.cpp  model_load.h
models/: scrfd_2.5g_bnkps_shape160x160.mnn  scrfd_2.5g_bnkps_shape320x320.mnn  scrfd_500m_bnkps_shape320x320.mnn
